syntax = "proto3";

package logging;

option go_package = "github.com/werbot/werbot/api/proto/logging";

service LoggingHandlers {
    rpc AddLogRecord(AddLogRecord.Request) returns (AddLogRecord.Response) {}
}

// rpc AddLogRecord
message AddLogRecord {
    message Request {
        Logger logger = 1;
        EventType event = 2;
        string id = 3;
    }

    message Response {}
}
// -----------------------------------------------------


enum Logger {
    logger_unspecified = 0;
    profile = 1;
    project = 2;
    server = 3;
}

enum EventType {
    event_unspecified = 0;
    onOnline = 1;
    onOffline = 2;
    onCreate = 3;
    onEdit = 4;
    onRemove = 5;
    onActive = 6;
    onInactive = 7;
    onChange = 8;
}
