syntax = "proto3";

package event;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/werbot/werbot/internal/grpc/event/proto";

service EventHandlers {
  rpc Events(Events.Request) returns (Events.Response) {}
  rpc Event(Event.Request) returns (Event.Response) {}
  rpc AddEvent(AddEvent.Request) returns (AddEvent.Response) {}
}

enum EventType {
  event_unspecified = 0;
  onOnline = 1;
  onOffline = 2;
  onCreate = 3;
  onEdit = 4;
  onRemove = 5;
  onActive = 6;
  onInactive = 7;
  onChange = 8;
  onLogin = 9;
  onLogoff = 10;
}

// section profile
message Profile {
  enum Section {
    section_unspecified = 0;
    profile = 1;
    setting = 2;
    password = 3;
    ssh_key = 4;
    license = 5;
    project = 6;
  }

  string id = 1 [(buf.validate.field).string.uuid = true];
  Section section = 2 [(buf.validate.field).enum.defined_only = true];
}

// section project
message Project {
  enum Section {
    section_unspecified = 0;
    project = 1;
    setting = 2;
    member = 3;
    team = 4;
    server = 10;
    database = 11;
    application = 12;
    desktop = 13;
    container = 14;
    cloud = 15;
  }

  string id = 1 [(buf.validate.field).string.uuid = true];
  Section section = 2 [(buf.validate.field).enum.defined_only = true];
}

// section server
message Server {
  enum Section {
    section_unspecified = 0;
    server = 1;
    member = 2;
    activity = 3;
    firewall = 4;
    setting = 5;
  }

  string id = 1 [(buf.validate.field).string.uuid = true];
  Section section = 2 [(buf.validate.field).enum.defined_only = true];
}


// rpc Events
message Events {
  message Request {
    oneof id {
      string profile_id = 1 [(buf.validate.field).string.uuid = true];
      string project_id = 2 [(buf.validate.field).string.uuid = true];
      string server_id = 3 [(buf.validate.field).string.uuid = true];
    }
    string user_id = 4 [
      (buf.validate.field).string.uuid = true,
      (buf.validate.field).ignore_empty = true
    ];
    int32 limit = 5;
    int32 offset = 6;
    string sort_by = 7;
  }

  message Response {
    int32 total = 1;
    repeated Event.Response records = 2;
  }
}
// -----------------------------------------------------

// rpc Event
message Event {
  message Request {
    oneof id {
      option (buf.validate.oneof).required = true;
      string profile_id = 1 [(buf.validate.field).string.uuid = true];
      string project_id = 2 [(buf.validate.field).string.uuid = true];
      string server_id = 3 [(buf.validate.field).string.uuid = true];
    }
    string user_id = 4 [
      (buf.validate.field).string.uuid = true,
      (buf.validate.field).ignore_empty = true
    ];
  }

  message Response {
    string id = 1; // profile_id, project_id, server_id
    string user_id = 2;
    string user_agent = 3;
    string ip = 4;
    EventType event = 5;
    int32 section = 6;
    bytes meta_data = 7;
    google.protobuf.Timestamp created_at = 8;
  }
}
// -----------------------------------------------------

// rpc AddEvent
message AddEvent {
  message Request {
    oneof section {
      Profile profile = 1;
      Project project = 2;
      Server server = 3;
    }
    string user_id = 4 [
      (buf.validate.field).string.uuid = true,
      (buf.validate.field).ignore_empty = true
    ];
    string user_agent = 5;
    string ip = 6 [(buf.validate.field).string.ip = true];
    EventType event = 7 [(buf.validate.field).enum.defined_only = true];
    bytes meta_data = 8;
  }

  message Response {
    string record_id = 1;
  }
}
// -----------------------------------------------------
