syntax = "proto3";

package logging;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/werbot/werbot/internal/grpc/logging/proto";

service LoggingHandlers {
  rpc ListRecords(ListRecords.Request) returns (ListRecords.Response) {}
  rpc Record(Record.Request) returns (Record.Response) {}
  rpc AddRecord(AddRecord.Request) returns (AddRecord.Response) {}
}

enum Logger {
  logger_unspecified = 0;
  profile = 1;
  project = 2;
  server = 3;
}

enum EventType {
  event_unspecified = 0;
  onOnline = 1;
  onOffline = 2;
  onCreate = 3;
  onEdit = 4;
  onRemove = 5;
  onActive = 6;
  onInactive = 7;
  onChange = 8;
}

// rpc ListRecords
message ListRecords {
  message Request {
    Logger logger = 1 [(buf.validate.field).enum.defined_only = true];
    string record_id = 2 [(buf.validate.field).string.uuid = true];
    int32 limit = 3;
    int32 offset = 4;
    string sort_by = 5;
  }

  message Response {
    int32 total = 1;
    repeated Record.Response records = 2;
  }
}
// -----------------------------------------------------

// rpc Record
message Record {
  message Request {
    Logger logger = 1 [(buf.validate.field).enum.defined_only = true];
    string record_id = 2 [(buf.validate.field).string.uuid = true];
  }

  message Response {
    string id = 1 [(buf.validate.field).string.uuid = true]; // profile_id, project_id, server_id
    string user_id = 2 [(buf.validate.field).string.uuid = true];
    string user_agent = 3;
    string ip = 4;
    EventType event = 5;
    bytes meta_data = 6;
    google.protobuf.Timestamp created = 7;
  }
}
// -----------------------------------------------------

// rpc AddRecord
message AddRecord {
  message Request {
    Logger logger = 1 [(buf.validate.field).enum.defined_only = true];
    string id = 2 [(buf.validate.field).string.uuid = true]; // profile_id, project_id, server_id
    string user_id = 3 [(buf.validate.field).string.uuid = true];
    string user_agent = 4;
    string ip = 5;
    EventType event = 6 [(buf.validate.field).enum.defined_only = true];
    bytes meta_data = 7;
  }

  message Response {
    string record_id = 1;
  }
}
// -----------------------------------------------------
